# mamba-knockout

./: LICENSE  README.md  pyproject.toml  tutorial.ipynb
final_plots/: plot_plans.json  prompt_filterations_presets.json
scripts/: install.sh
src/analysis/: prompt_filterations.py
src/analysis/experiment_results/: default_data_reqs.py  helpers.py  hyper_param_definition.py  model_prompt_combination.py  plot_plan.py  prompt_filteration_factory.py  prompt_selections.json  results_bank.py
src/analysis/plots/: heatmaps.py  image_combiner.py  info_flow_confidence.py
src/app/: __init__.py  app_consts.py  app_utils.py  data_store.py  entry_point.py  texts.py
src/app/components/: data_requirements.py  info_flow.py  inputs.py  model_analysis.py  multi_plots.py  plot_generation.py  plot_plans.py  prompt_filter.py  result_bank.py  tokenization.py
src/app/page/: p01_home.py  p02_results_bank.py  p03_data_requirements.py  p04_heatmap_creation.py  p05_info_flow_analysis.py  p06_final_plots.py  p07_prompts_comparison.py  p08_mamba_analysis.py  p09_prompt_filteration_presets.py
src/core/: consts.py  names.py  types.py
src/data_ingestion/data_defs/: data_defs.py
src/data_ingestion/datasets/: download_dataset.py  splitting.py
src/data_ingestion/helpers/: dataframe.py  logits_utils.py
src/experiments/infrastructure/: base_prompt_filteration.py  base_runner.py  model_interface.py  setup_models.py
src/experiments/knockout/gpt/gpt2/: gpt2_knockout_utils.py
src/experiments/knockout/llama/: interfere_hook.py  llama_attention_forward.py  llama_attn.py  scaled_dot_product_attention.py  sdpa_attention.py
src/experiments/knockout/mamba/mamba1/: falcon_variant.py  original_variant.py
src/experiments/knockout/mamba/mamba1/helpers/: knockout_scan.py  ssm_interfere.py
src/experiments/knockout/mamba/mamba2/: minimal_mamba2.py
src/experiments/runners/: evaluate_model.py  full_pipeline.py  heatmap.py  info_flow.py
src/utils/: PIL_utils.py  file_system.py  json_utils.py  jsonable.py  pydantic_utils.py  tests_utils.py  type_checking.py  types_utils.py
src/utils/infra/: data_object.py  experiment_helper.py  git.py  image_utils.py  output_path.py  seed.py  slurm.py  slurm_job_folder.py  snapshot.py
src/utils/streamlit/components/: aagrid.py  extended_streamlit_pydantic.py
src/utils/streamlit/helpers/: allow_nested_expanders.py  background_task.py  cache.py  component.py  global_store.py  redirect_output.py  session_keys.py
src/utils/streamlit/st_pydantic_v2/: backend.py  input.py
src/utils/streamlit/ui_pydantic_v2/: extra_types.py
tests/: __init__.py  conftest.py
tests/shared/: __init__.py  constants.py
tests/src/: __init__.py  test_llama2_tokenizer.py  test_llama_knockout.py  test_mamba_knockout.py
tests/src/experiments/: __init__.py  baseline_builder.py  test_experiments_configs.py  test_info_flow.py
tests/src/experiments/baselines/full_pipeline/: serialized_results.json
tests/src/experiments/baselines/full_pipeline/data/preprocessed/counter_fact/splitted/: dataset_dict.json
tests/src/experiments/baselines/full_pipeline/data/preprocessed/counter_fact/splitted/train1/: data-00000-of-00001.arrow  state.json
tests/src/experiments/baselines/full_pipeline/data/preprocessed/counter_fact/splitted/train2/: data-00000-of-00001.arrow  dataset_info.json  state.json
tests/src/experiments/baselines/full_pipeline/output/evaluate_model/v=test_baseline/arch=gpt2/size=355M/ds=counter_fact/outputs/: outputs.csv
tests/src/experiments/baselines/full_pipeline/output/evaluate_model/v=test_baseline/arch=gpt2/size=355M/ds=counter_fact/running_history/: test_run_id.json
tests/src/experiments/baselines/full_pipeline/output/evaluate_model/v=test_baseline/arch=llama3.2/size=1B/ds=counter_fact/outputs/: outputs.csv
tests/src/experiments/baselines/full_pipeline/output/evaluate_model/v=test_baseline/arch=llama3.2/size=1B/ds=counter_fact/running_history/: test_run_id.json
tests/src/experiments/baselines/full_pipeline/output/evaluate_model/v=test_baseline/arch=mamba1/size=130M/ds=counter_fact/outputs/: outputs.csv
tests/src/experiments/baselines/full_pipeline/output/evaluate_model/v=test_baseline/arch=mamba1/size=130M/ds=counter_fact/running_history/: test_run_id.json
tests/src/experiments/baselines/full_pipeline/output/evaluate_model/v=test_baseline/arch=mamba2/size=130M/ds=counter_fact/outputs/: outputs.csv
tests/src/experiments/baselines/full_pipeline/output/evaluate_model/v=test_baseline/arch=mamba2/size=130M/ds=counter_fact/running_history/: test_run_id.json
tests/src/experiments/baselines/full_pipeline/output/evaluate_model/v=test_baseline/arch=qwen2.5/size=0.5B/ds=counter_fact/outputs/: outputs.csv
tests/src/experiments/baselines/full_pipeline/output/evaluate_model/v=test_baseline/arch=qwen2.5/size=0.5B/ds=counter_fact/running_history/: test_run_id.json
tests/src/experiments/baselines/full_pipeline/output/evaluate_model/v=test_baseline/arch=qwen2/size=0.5B/ds=counter_fact/outputs/: outputs.csv
tests/src/experiments/baselines/full_pipeline/output/evaluate_model/v=test_baseline/arch=qwen2/size=0.5B/ds=counter_fact/running_history/: test_run_id.json
tests/src/experiments/baselines/full_pipeline/output/heatmap/v=test_baseline/arch=gpt2/size=355M/ds=counter_fact/ws=15/outputs/: heatmaps.h5
tests/src/experiments/baselines/full_pipeline/output/heatmap/v=test_baseline/arch=gpt2/size=355M/ds=counter_fact/ws=15/running_history/: test_run_id.json
tests/src/experiments/baselines/full_pipeline/output/heatmap/v=test_baseline/arch=llama3.2/size=1B/ds=counter_fact/ws=15/outputs/: heatmaps.h5
tests/src/experiments/baselines/full_pipeline/output/heatmap/v=test_baseline/arch=llama3.2/size=1B/ds=counter_fact/ws=15/running_history/: test_run_id.json
tests/src/experiments/baselines/full_pipeline/output/heatmap/v=test_baseline/arch=mamba1/size=130M/ds=counter_fact/ws=15/outputs/: heatmaps.h5
tests/src/experiments/runners/: __init__.py  test_evaluate_model.py  test_heatmap.py  test_info_flow.py  test_utils.py
tests/src/utils/: test_jsonable.py  test_tests_utils.py
(+64 files in other folders)
